--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,87 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+# Nome do Programa
 
-# C extensions
-*.so
+print ("Calculo de sálario")
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Função com Parametro
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+def calc1 (salarioLiquido):
+    return salarioLiquido * 0.925
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+def calc2 (salarioLiquido):
+    return salarioLiquido * 0.85
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+def calc3 (salarioLiquido):
+    return salarioLiquido * 0.775
 
-# Translations
-*.mo
-*.pot
+def calc4 (salarioLiquido):
+    return salarioLiquido * 0.725  
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+def descontoINSS(salarioLiquido):
+    return salarioLiquido * 0.0725
 
-# Flask stuff:
-instance/
-.webassets-cache
+def descontoVT(salarioLiquido):
+    return salarioLiquido * 0.06
 
-# Scrapy stuff:
-.scrapy
+def descontoVR(salarioLiquido):
+    return salarioLiquido * 0.10
 
-# Sphinx documentation
-docs/_build/
 
-# PyBuilder
-.pybuilder/
-target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
 
-# IPython
-profile_default/
-ipython_config.py
+# Concatenando as funções
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+descIR1 = calc1
+descIR2 = calc2
+descIR3 = calc3
+descIR4 = calc4
+descINSS = descontoINSS
+descVR = descontoVR
+descVT = descontoVT
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
+# Começo do código
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
+salario = float(input("Digite o valor do seu sálario: "))
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+if salario <= 2112.00: # Condições para o calculo do sálario
+    print(f"O valor do desconto do INSS é de: R$ {descINSS(salario)}")
+    print(f"O valor do desconto do VR é de: R$ {descVR(salario)}")
+    print(f"O valor do desconto do VT é de: R$ {descVT(salario)}")
+    print("Isento de Imposto de Renda") 
+    salario = salario - (descINSS(salario) + descVR(salario) + descVT(salario))
+    print(f"Seu salário é R$: {salario}")
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+elif salario <= 2826.66:
+    salario = round(descIR1(salario) , 2)
+    valorDesconto1 = round(salario * 0.075 , 2)
+    print(f"Foi descontado 7,5% de imposto de renda: R$ {valorDesconto1}")
+    print(f"O valor do desconto do VR é de: R$ {descVR(salario)}")
+    print(f"O valor do desconto do VT é de: R$ {descVT(salario)}")
+    salario = salario - (descVR(salario) + descVT(salario))
+    print(f"Seu salário será de R$: {salario}")
 
-# SageMath parsed files
-*.sage.py
+elif salario <= 3751.06:
+    valorDesconto2 = round(salario * 0.15 , 2)
+    print(f"Foi descontado 15% de imposto de renda: R$ {valorDesconto2}")
+    print(f"O valor do desconto do VR é de: R$ {descVR(salario)}")
+    print(f"O valor do desconto do VT é de: R$ {descVT(salario)}")
+    salario = salario - (descVR(salario) + descVT(salario))
+    print(f"Seu sálario sera de R$: {salario}")
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+elif salario <= 4664.68:
+    valorDesconto3 = round(salario * 0.225 , 2)
+    print(f"Foi descontado 22,5% de imposto de renda: R$ round({valorDesconto3, 2})")
+    print(f"O valor do desconto do VR é de: R$ {descVR(salario)}")
+    print(f"O valor do desconto do VT é de: R$ {descVT(salario)}")
+    salario = salario - (descVR(salario) + descVT(salario))
+    print (f"Seu salário será de R$: {salario}")
 
-# Spyder project settings
-.spyderproject
-.spyproject
+else:
+    valorDesconto4 = round(salario * 0.275 , 2)
+    print(f"Foi descontado 27,5% de imposto de renda: R$ {valorDesconto4}")
+    print(f"O valor do desconto do VR é de: R$ {descVR(salario)}")
+    print(f"O valor do desconto do VT é de: R$ {descVT(salario)}")
+    salario = salario - (descVR(salario) + descVT(salario))
+    print(f"Seu salario será de R$: {salario}")
 
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# Codígo Finalizado
